Refactor RepairManagement (#520)
Closes #501
